test/error/patternbracket1.luau
print(string.match("test", "test["))